--- a/app/templates/feedback.html
+++ b/app/templates/feedback.html
@@ -2,6 +2,7 @@
 
 {% block app_content %}
 
+    <!-- SUMMARY RESULTS -->
     <section class="py-3" id="results">
 		<div class="container" id="table_summary">
 			<table class="table table-dark table-bordered table-hover">
@@ -23,6 +24,7 @@
 		</div>
 	</section>
 
+    <!-- INDIVIDUAL QUESTION RESULTS -->
     <section class="py-3" id="results">
 		<div class="container" id="table_results">
 			<table class="table table-dark table-bordered table-hover">
