--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block app_content %}
 
+    <!-- NAVIGATION LINKS -->
     <section>
         <br>
         <div class="container text-center">
@@ -20,6 +21,7 @@
         </div>
     </section>
 
+    <!-- WELCOME SECTION -->
     <section>
         <div class="container">
             <div class="row">
