--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-    <h1>File Not Found</h1>
-    <p><a href="{{ url_for('index') }}">Back</a></p>
+
+    <section>
+        <h1>File Not Found</h1>
+        <p><a href="{{ url_for('index') }}">Back</a></p>
+    </section>
+
 {% endblock %}
