--- a/app/templates/learn.html
+++ b/app/templates/learn.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block app_content %}
+
+    <!-- SELECT HIGH/LOW -->
     <section>
         <br>
         <div class="container text-center">
@@ -15,8 +17,8 @@
         </div>
     </section>
 
+    <!-- CONTENT -->
     {% block risk_content %}{% endblock %}
-
 
     <!-- BLANK SPACE -->
     {% if space %}
