--- a/app/templates/statistics.html
+++ b/app/templates/statistics.html
@@ -2,6 +2,7 @@
 
 {% block app_content %}
 
+	<!-- SUMMARY RESULTS -->
 	<section class="py-3" id="results">
 		<div class="container" id="table_results">
 			<table class="table table-dark table-bordered table-hover">
@@ -18,12 +19,12 @@
 						<td class="text-center results">{{ avg_score }}</td>
 						<td class="text-center results">{{ max_score }}</td>
 					</tr>
-
 				</tbody>
 			</table>
 		</div>
 	</section>
 
+	<!-- CHART RESULTS -->
 	<section>
 		<div class="container">
 			<div class="row">
@@ -116,7 +117,7 @@
 
 	</script>
 
-	<!-- SHOW ADDITION TABLES -->
+	<!-- SHOW ADDITIONAL TABLES -->
 	<section>
 		<br>
 		<div class="container text-center" style="margin-bottom: 5%;">
