--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -2,9 +2,12 @@
 
 {% block app_content %}
 
-    <section>
-        <h1>File Not Found</h1>
-        <p><a href="{{ url_for('index') }}">Back</a></p>
+    <section style="text-align: center;">
+        <h2><br>Whoops! We couldn'd find that page, did you spell the link correctly?</h1>
+        <br>
+        <a href="{{ url_for('index') }}">
+            <button type="button" class="btn btn-primary btn-lg btn-outline-warning" id="feedback">Feedback</button>
+        </a>
     </section>
 
 {% endblock %}
